<resources>
    <string name="app_name">Newsify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_vision">Our Vision</string>
    <string name="ready">Ready</string>
    <string name="welcome_ayush">Welcome Ayush</string>
    <string name="feeds">Feeds</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_image">Select Image</string>
    <string name="go_back_btn">go back btn</string>
    <string name="hello">Hello,</string>
    <string name="name">Ayush</string>
    <string name="browse_by">Browse By</string>
    <string name="tech_news">Meta explains how AI influences what we see on Facebook and Instagram</string>
    <string name="genre">Tech News</string>
    <string name="comments">View all 9 comments</string>
</resources>