<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.WelcomeFragment"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/img_welcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:contentDescription="@string/welcome_ayush"
            android:src="@drawable/welcome"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_ayush"
            android:layout_weight="0.1"
            android:textSize="28sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="0dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_feeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feeds"
                android:textSize="13sp"
                android:textStyle="bold"
                android:padding="15dp"
                app:backgroundTint="@null"
                android:background="@drawable/gradient_btn"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:textSize="13sp"
                android:textStyle="bold"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                app:backgroundTint="@null"
                android:background="@drawable/gradient_btn"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>