<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.VisionFragment"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <ImageView
            android:id="@+id/img_vision"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:contentDescription="@string/our_vision"
            android:src="@drawable/ourvision"
            android:layout_marginTop="15dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_vision"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="40dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"
                android:padding="30dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:text="@string/our_vision"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/tv_body"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:gravity="top"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/lorem"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_ready"
                        android:layout_height="90dp"
                        android:layout_width="90dp"
                        android:text="@string/ready"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif"
                        android:textSize="15sp"
                        app:cornerRadius="1000dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:insetLeft="0dp"
                        android:insetRight="0dp"
                        android:backgroundTint="@color/white"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>