<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view_news"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="15dp"
    app:cardCornerRadius="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/sample_verge"/>

        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The Verge"
            android:layout_toEndOf="@id/img_logo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/news_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:layout_alignStart="@id/source"
            android:layout_alignBottom="@id/img_logo"
            android:layout_below="@id/source"
            android:textColor="#8F000000"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tech_news"
            android:layout_below="@id/img_logo"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="13sp"/>

        <ImageButton
            android:id="@+id/news_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:background="@drawable/bg_white_rounded"
            android:src="@drawable/sample_news"/>

        <TextView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:layout_below="@id/news_img"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="11sp"/>

        <LinearLayout
            android:layout_below="@id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start">

                <ImageButton
                    android:id="@+id/btn_like"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_like"
                    android:background="@color/white"/>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="21 Likes"
                    android:layout_gravity="center"
                    android:textSize="11sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btn_comment"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_comment"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="9 Comments"
                    android:layout_gravity="center"
                    android:textSize="11sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_share"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Share"
                    android:layout_gravity="center"
                    android:textSize="11sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>