<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.FeedFragment"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_rectangle"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/image_btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_person_24"
                android:background="@drawable/circular"
                android:padding="7dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/tv_name"
                android:textSize="18sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif"
                android:layout_below="@id/tv_hello"/>
            <SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryHint="Explore"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_white_rounded"
                android:queryBackground="@android:color/transparent"
                android:layout_below="@id/tv_name"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/browse_by"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"/>

            <com.google.android.material.chip.ChipGroup
                app:singleSelection="true"
                app:selectionRequired="true"
                android:id="@+id/browse_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_latest"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:checked="true"
                android:text="Latest"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipStrokeWidth="1dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="11sp"
                android:textAlignment="center"
                app:chipCornerRadius="20dp" />

                <com.google.android.material.chip.Chip
                android:id="@+id/chip_oldest"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:text="Older"
                app:chipStrokeWidth="1dp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-medium"
                android:textSize="11sp"
                app:chipCornerRadius="20dp" />
            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                tools:itemCount="10"
                tools:listitem="@layout/news_item_card" />



        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"/>

</FrameLayout>